# ai-companion-langchain-integrator

./: main.py  pyproject.toml
src/langchain_huggingface_hijack/chat_models/: huggingface.py
src/langchain_integrator/: __init__.py  document.py
src/langchain_integrator/mcp/built-in/: weather.py
src/langchain_llamacpp/: __init__.py
src/langchain_mlx/: __init__.py
src/langchain_mlx/chat_models/: __init__.py  mlx_lm.py  mlx_vlm.py
src/langchain_mlx/llms/: __init__.py  mlx_lm.py
src/langchain_vllm/llms/: __init__.py  vllm.py
